# ratatui-components

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ratatui-components/: Cargo.toml
crates/ratatui-components-ansi/: Cargo.toml
crates/ratatui-components-ansi/src/: lib.rs
crates/ratatui-components-core/: Cargo.toml
crates/ratatui-components-core/src/: code_render.rs  code_view.rs  crossterm_input.rs  help.rs  input.rs  keymap.rs  lib.rs  render.rs  scroll.rs  selection.rs  text.rs  textarea.rs  theme.rs  viewport.rs  virtual_list.rs
crates/ratatui-components-core/src/datagrid/: view.rs
crates/ratatui-components-datagrid/: Cargo.toml
crates/ratatui-components-datagrid/examples/: datagrid.rs
crates/ratatui-components-datagrid/src/: view.rs
crates/ratatui-components-diff/: Cargo.toml
crates/ratatui-components-diff/src/: lib.rs  parser.rs
crates/ratatui-components-markdown/: Cargo.toml
crates/ratatui-components-markdown/benches/: markdown_view.rs  markdown_view_mdstream.rs
crates/ratatui-components-markdown/examples/: dump.rs  mdstream.rs
crates/ratatui-components-markdown/src/: lib.rs  render.rs  streaming.rs  view.rs
crates/ratatui-components-markdown/tests/: golden.rs
crates/ratatui-components-syntax/: Cargo.toml
crates/ratatui-components-syntax-syntect/: Cargo.toml
crates/ratatui-components-syntax-syntect/src/: lib.rs
crates/ratatui-components-syntax-treesitter/: Cargo.toml
crates/ratatui-components-syntax-treesitter/src/: lib.rs
crates/ratatui-components-syntax/src/: auto.rs  lib.rs  syntect.rs  treesitter.rs
crates/ratatui-components-transcript/: Cargo.toml
crates/ratatui-components-transcript/examples/: transcript.rs
crates/ratatui-components-transcript/src/: view.rs
crates/ratatui-components/examples/: agent_mvp.rs  code_ansi.rs  datagrid.rs  dump.rs  mdstream.rs  preview.rs  render_core.rs  transcript.rs  virtual_list.rs
crates/ratatui-components/src/: ansi.rs  input.rs  lib.rs  render.rs  textarea.rs  viewport.rs  virtual_list.rs  wrapping.rs
crates/ratatui-components/src/diff/: mod.rs
crates/ratatui-components/src/transcript/: view.rs
docs/: EXAMPLES.md  MARKDOWNVIEW_GLOW_PARITY.md  MVP.md  PARITY_MARKDOWNVIEW_GLOW.md  ROADMAP.md  STREAMING.md
docs/adr/: 0000-template.md  0001-component-model.md  0002-theming.md  0003-rich-text-pipeline.md  0004-workspace-and-crates.md  0005-syntax-highlighting-backends.md  README.md
docs/fixtures/: glow_parity.md
docs/fixtures/golden/ratatui/: glow_parity__glow_like__w40.txt  glow_parity__glow_like__w80.txt
scripts/: diff-glow.zsh  gen-goldens.zsh  release-check.zsh
