[workspace]
members = [
  "crates/ratatui-components",
  "crates/ratatui-components-core",
  "crates/ratatui-components-markdown",
  "crates/ratatui-components-syntax",
]
exclude = ["repo-ref/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.85"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/ratatui-components"
homepage = "https://github.com/Latias94/ratatui-components"
documentation = "https://docs.rs/ratatui-components"

[workspace.dependencies]
ratatui = "0.29"
unicode-width = "0.2"
pulldown-cmark = "0.12"
ansi-to-tui = "7"
syntect = "5"
tree-sitter = "0.26.3"
crossterm = "0.28"
similar = "2"
url = "2"
termprofile = "0.2"
virtualizer = "0.2.0"
