[package]
name = "ratatui-components-datagrid"
version.workspace = true
edition.workspace = true

[dependencies]
ratatui.workspace = true
ratatui-components = { path = "../ratatui-components" }
virtualizer = { git = "https://github.com/Latias94/virtualizer", branch = "main" }

[dev-dependencies]
crossterm.workspace = true
