[package]
name = "ratatui-components-markdown"
version.workspace = true
edition.workspace = true

[dependencies]
pulldown-cmark.workspace = true
ratatui.workspace = true
ratatui-components-core = { path = "../ratatui-components-core" }
unicode-width.workspace = true
url.workspace = true
mdstream = { version = "0.2.0", optional = true }

[features]
default = []
mdstream = ["dep:mdstream"]

[dev-dependencies]
crossterm.workspace = true
criterion = "0.5"

[[bench]]
name = "markdown_view"
harness = false

[[bench]]
name = "markdown_view_mdstream"
harness = false
required-features = ["mdstream"]
