[package]
name = "ratatui-components-markdown"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ratatui-components-markdown"
description = "Markdown rendering and view components for ratatui-components."
readme = "../../README.md"
keywords = ["ratatui", "tui", "markdown", "terminal", "components"]
categories = ["command-line-interface", "text-processing"]
exclude = ["tests/**", "benches/**"]

[dependencies]
pulldown-cmark.workspace = true
ratatui.workspace = true
ratatui-components-core = { path = "../ratatui-components-core" }
unicode-width.workspace = true
url.workspace = true
mdstream = { version = "0.2.0", optional = true }

[features]
default = []
mdstream = ["dep:mdstream"]

[dev-dependencies]
crossterm.workspace = true
criterion = "0.5"

[[bench]]
name = "markdown_view"
harness = false

[[bench]]
name = "markdown_view_mdstream"
harness = false
required-features = ["mdstream"]

[package.metadata.docs.rs]
no-default-features = true
all-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]
