[package]
name = "ratatui-components-syntax-treesitter"
version.workspace = true
edition.workspace = true

[features]
default = []
syntax-treesitter-lang-rust = []
syntax-treesitter-lang-python = []

[dependencies]
ratatui.workspace = true
ratatui-components = { path = "../ratatui-components" }
tree-sitter.workspace = true

