[package]
name = "ratatui-components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "High-level, batteries-included components for building modern TUIs with ratatui."
readme = "../../README.md"
keywords = ["ratatui", "tui", "terminal", "widgets", "components"]
categories = ["command-line-interface"]
exclude = ["tests/**", "benches/**"]

[dependencies]
ratatui.workspace = true
unicode-width.workspace = true
ratatui-components-core = { path = "../ratatui-components-core" }
ansi-to-tui = { workspace = true, optional = true }
similar = { workspace = true, optional = true }
ratatui-components-markdown = { path = "../ratatui-components-markdown", optional = true }
ratatui-components-syntax = { path = "../ratatui-components-syntax", optional = true }

[features]
default = []
crossterm = ["ratatui-components-core/crossterm"]
ansi = ["dep:ansi-to-tui"]
diff = ["dep:similar"]
markdown = ["dep:ratatui-components-markdown"]
mdstream = ["markdown", "ratatui-components-markdown/mdstream"]
transcript = ["ansi", "diff", "markdown"]
syntect = ["dep:ratatui-components-syntax", "ratatui-components-syntax/syntect"]
treesitter = ["dep:ratatui-components-syntax", "ratatui-components-syntax/treesitter"]
termprofile = ["dep:ratatui-components-syntax", "ratatui-components-syntax/termprofile"]

treesitter-lang-bash = ["treesitter", "ratatui-components-syntax/treesitter-lang-bash"]
treesitter-lang-c = ["treesitter", "ratatui-components-syntax/treesitter-lang-c"]
treesitter-lang-cpp = ["treesitter", "ratatui-components-syntax/treesitter-lang-cpp"]
treesitter-lang-css = ["treesitter", "ratatui-components-syntax/treesitter-lang-css"]
treesitter-lang-go = ["treesitter", "ratatui-components-syntax/treesitter-lang-go"]
treesitter-lang-html = ["treesitter", "ratatui-components-syntax/treesitter-lang-html"]
treesitter-lang-java = ["treesitter", "ratatui-components-syntax/treesitter-lang-java"]
treesitter-lang-javascript = ["treesitter", "ratatui-components-syntax/treesitter-lang-javascript"]
treesitter-lang-json = ["treesitter", "ratatui-components-syntax/treesitter-lang-json"]
treesitter-lang-python = ["treesitter", "ratatui-components-syntax/treesitter-lang-python"]
treesitter-lang-rust = ["treesitter", "ratatui-components-syntax/treesitter-lang-rust"]
treesitter-lang-toml = ["treesitter", "ratatui-components-syntax/treesitter-lang-toml"]
treesitter-lang-typescript = ["treesitter", "ratatui-components-syntax/treesitter-lang-typescript"]
treesitter-lang-yaml = ["treesitter", "ratatui-components-syntax/treesitter-lang-yaml"]

treesitter-langs-common = ["treesitter", "ratatui-components-syntax/treesitter-langs-common"]
treesitter-langs-all = ["treesitter", "ratatui-components-syntax/treesitter-langs-all"]

[dev-dependencies]
crossterm.workspace = true

[[example]]
name = "code_ansi"
required-features = ["ansi", "syntect"]

[[example]]
name = "preview"
required-features = ["diff", "markdown", "syntect"]

[[example]]
name = "transcript"
required-features = ["transcript", "syntect"]

[[example]]
name = "agent_mvp"
required-features = ["transcript", "syntect"]

[[example]]
name = "mdstream"
required-features = ["mdstream", "syntect"]

[[example]]
name = "dump"
required-features = ["markdown"]

[[example]]
name = "render_core"
required-features = ["markdown"]

[package.metadata.docs.rs]
no-default-features = true
all-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]
